# mcac

./: .gitignore  LICENSE  MCAC.jucer  README.md
Builds/VisualStudio2019/: MultiChannelAudioCapture.sln  MultiChannelAudioCapture_App.vcxproj  MultiChannelAudioCapture_App.vcxproj.filters  resource.h  resources.aps  resources.rc
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  asio_api.cpp  asio_api.h  asio_callbacks_wrapper.h  circlebuf.h  core.h  coreaudio-writer.h  device.cpp  device.h  device_manager.cpp  device_manager.h  utils.cpp  writer.cpp  writer.h
Source/juce/: JuceHeader.h
Source/obs/: WinHandle.h  circlebuf.h
Source/win-asio2/: CMakeLists.txt  plugin-main.cpp  win-asio2.cpp
Source/win-asio2/asio/: asio.cpp  asio.h  asiolist.cpp
